# src/main/java/br/com/iaquant/api/customer/user/controller/CustomerApiImpl.java
@@ -5,6 +5,9 @@ import br.com.iaquant.api.customer.user.openapi.controller.CustomerApi;
 import br.com.iaquant.api.customer.user.openapi.model.domain.*;
 import br.com.iaquant.api.customer.user.mapper.CustomerMapper;
 import br.com.iaquant.api.customer.user.usecase.CustomerUseCase;
+import br.com.iaquant.api.customer.user.utils.Constants;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -21,6 +24,16 @@ public class CustomerApiImpl implements CustomerApi {
         this.customerUseCase = customerUseCase;
         this.customerMapper = customerMapper;
         this.customerMetrics = customerMetrics;
+    }
+
+    @Override
+    public ResponseEntity<ListCustomerResponse> listAllCustomer() {
+        return ResponseEntity.ok(customerMapper.map(customerUseCase.filter(PageRequest.of(0, Constants.NUMBER_PAGES, Sort.by(Constants.SORT_ATTRIBUTE)))));
+    }
+
+    @Override
+    public ResponseEntity<ListCustomerResponse> filterCustomer(FilterRequest filterRequest) {
+        return ResponseEntity.ok(customerMapper.map(customerUseCase.filter(PageRequest.of(filterRequest.getPage(), Constants.NUMBER_PAGES, Sort.by(Constants.SORT_ATTRIBUTE)))));
     }
 
     @Override
@@ -43,5 +56,10 @@ public class CustomerApiImpl implements CustomerApi {
         var response = ResponseEntity.status(201).body(customerMapper.map(customerUseCase.save(customerMapper.map(customerRequest))));
         customerMetrics.incrementCustomerSuccessCount();
         return response;
+    }
+
+    @Override
+    public ResponseEntity<StatusResponse> deleteCustomer(Long id) {
+        return ResponseEntity.ok(customerMapper.map(customerUseCase.delete(id)));
     }
 }
