# src/main/java/br/com/iaquant/api/customer/user/datasource/postgres/mapper/CustomerPostgresMapper.java
@@ -4,7 +4,10 @@ import br.com.iaquant.api.customer.user.datasource.postgres.entity.CustomerTable
 import br.com.iaquant.api.customer.user.entity.Customer;
 import org.mapstruct.Mapper;
 import org.mapstruct.MappingConstants;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 
+import java.util.List;
 import java.util.Optional;
 
 @Mapper(componentModel= MappingConstants.ComponentModel.SPRING)
@@ -16,4 +19,11 @@ public interface CustomerPostgresMapper {
     default Customer map(Optional<CustomerTable> customerTableOptional) {
         return map(customerTableOptional.orElse(null));
     }
+
+    default Page<Customer> map(Page<CustomerTable> customerTablePage) {
+        List<Customer> content = map(customerTablePage.getContent());
+        return new PageImpl<>(content, customerTablePage.getPageable(), customerTablePage.getTotalElements());
+    }
+
+    List<Customer> map(List<CustomerTable> list);
 }
